fix quickadd modal on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1910,6 +1910,9 @@ select{
 .pointer-events-none{
   pointer-events: none;
 }
+.pointer-events-auto{
+  pointer-events: auto;
+}
 .static{
   position: static;
 }
@@ -2260,6 +2263,9 @@ select{
   height: calc(100vh - 3.5rem);
   height: calc(var(--screen-height, 100vh) - var(--height-nav));
 }
+.h-\[1000px\]{
+  height: 1000px;
+}
 .max-h-0{
   max-height: 0px;
 }
@@ -2381,6 +2387,9 @@ select{
 .max-w-\[64px\]{
   max-width: 64px;
 }
+.max-w-\[660px\]{
+  max-width: 660px;
+}
 .max-w-\[770px\]{
   max-width: 770px;
 }
@@ -2407,9 +2416,6 @@ select{
 }
 .max-w-xl{
   max-width: 36rem;
-}
-.max-w-\[660px\]{
-  max-width: 660px;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -2522,6 +2528,10 @@ select{
 }
 .cursor-pointer{
   cursor: pointer;
+}
+.touch-pan-y{
+  --tw-pan-y: pan-y;
+  touch-action: var(--tw-pan-x) var(--tw-pan-y) var(--tw-pinch-zoom);
 }
 .select-none{
   -webkit-user-select: none;
@@ -2691,12 +2701,6 @@ select{
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * (1 - var(--tw-space-y-reverse)));
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * (1 - var(--tw-divide-y-reverse)));
@@ -2743,6 +2747,9 @@ select{
 .overflow-y-scroll{
   overflow-y: scroll;
 }
+.overscroll-contain{
+  overscroll-behavior: contain;
+}
 .truncate{
   overflow: hidden;
   text-overflow: ellipsis;
@@ -2774,9 +2781,6 @@ select{
 }
 .rounded-sm{
   border-radius: 0.125rem;
-}
-.rounded-lg{
-  border-radius: 0.5rem;
 }
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
@@ -2840,11 +2844,6 @@ select{
   --tw-border-opacity: 1;
   border-color: rgba(233, 56, 43, 1);
   border-color: rgba(233, 56, 43, var(--tw-border-opacity, 1));
-}
-.border-black{
-  --tw-border-opacity: 1;
-  border-color: rgba(0, 0, 0, 1);
-  border-color: rgba(0, 0, 0, var(--tw-border-opacity, 1));
 }
 .border-contrast\/20{
   border-color: rgba(250, 250, 250, 0.2);
@@ -3115,6 +3114,10 @@ select{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .px-\[0\.125rem\]{
   padding-left: 0.125rem;
   padding-right: 0.125rem;
@@ -3150,10 +3153,6 @@ select{
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 .pb-0{
   padding-bottom: 0px;
@@ -3433,11 +3432,6 @@ select{
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, 1);
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
-}
-.text-red-700{
-  --tw-text-opacity: 1;
-  color: rgba(185, 28, 28, 1);
-  color: rgba(185, 28, 28, var(--tw-text-opacity, 1));
 }
 .underline{
   text-decoration-line: underline;
@@ -3810,18 +3804,13 @@ button.uploadcare--button_primary {
   background-color: rgba(191, 219, 254, 1);
   background-color: rgba(191, 219, 254, var(--tw-bg-opacity, 1));
 }
-.hover\:bg-gray-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgba(243, 244, 246, 1);
-  background-color: rgba(243, 244, 246, var(--tw-bg-opacity, 1));
+.hover\:bg-primary\/5:hover{
+  background-color: rgba(20, 20, 20, 0.05);
+  background-color: rgb(var(--color-primary) / 0.05);
 }
 .hover\:bg-primary\/80:hover{
   background-color: rgba(20, 20, 20, 0.8);
   background-color: rgb(var(--color-primary) / 0.8);
-}
-.hover\:bg-primary\/5:hover{
-  background-color: rgba(20, 20, 20, 0.05);
-  background-color: rgb(var(--color-primary) / 0.05);
 }
 .hover\:bg-primary\/90:hover{
   background-color: rgba(20, 20, 20, 0.9);
@@ -3836,26 +3825,17 @@ button.uploadcare--button_primary {
   color: rgba(20, 20, 20, 0.5);
   color: rgb(var(--color-primary) / 0.5);
 }
+.hover\:text-primary\/80:hover{
+  color: rgba(20, 20, 20, 0.8);
+  color: rgb(var(--color-primary) / 0.8);
+}
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, 1);
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
-.hover\:text-white\/80:hover{
-  color: rgba(255, 255, 255, 0.8);
-}
-.hover\:text-primary\/80:hover{
-  color: rgba(20, 20, 20, 0.8);
-  color: rgb(var(--color-primary) / 0.8);
-}
 .hover\:underline:hover{
   text-decoration-line: underline;
-}
-.hover\:opacity-80:hover{
-  opacity: 0.8;
-}
-.hover\:opacity-90:hover{
-  opacity: 0.9;
 }
 .focus\:border-blue-500:focus{
   --tw-border-opacity: 1;
@@ -3877,11 +3857,6 @@ button.uploadcare--button_primary {
 .focus\:border-primary\/90:focus{
   border-color: rgba(20, 20, 20, 0.9);
   border-color: rgb(var(--color-primary) / 0.9);
-}
-.focus\:border-primary:focus{
-  --tw-border-opacity: 1;
-  border-color: rgba(20, 20, 20, 1);
-  border-color: rgb(var(--color-primary) / var(--tw-border-opacity, 1));
 }
 .focus\:underline:focus{
   text-decoration-line: underline;
